added all work experiences

--- a/styles.css
+++ b/styles.css
@@ -246,23 +246,28 @@ h1 {
 
 #work-experience-list {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 24px; /* vorher 32px */
     width: 1280px;
     margin: 0 auto;
 }
 
-#work-tile {
+.work-tile {
     display: flex;
     flex-direction: column;
     align-items: center; 
     padding: 24px; /* vorher 0%; reduziert, aber nicht ganz entfernt für Luft */
     gap: 8px; /* vorher 12px */
     width: 585px;
+    height: 200px; /* Höhe angepasst */
     border: 1px solid #DEDEDE;
     border-radius: 44px;
     box-sizing: border-box;
+
+
 }
 
 .work-tile-line {
