--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     position: relative;
     width: 1280px;
     height: 100%;
-    left: calc(50% - 1280px/2);
+    /* left: calc(50% - 1280px/2); */
 }
 
 ul, li {
@@ -17,21 +17,21 @@ ul, li {
 }
 
 #hero {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    gap: 216px;
-    /* position: absolute; */
-    width: 1280px;
-    height: 542px;
-    left: calc(50% - 1280px/2);
-    top: 222px;
-    border: 1px solid #D9D9D9;
-    border-radius: 44px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 216px;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 24px;
+  border: 1px solid #D9D9D9;
+  border-radius: 44px;
+  box-sizing: border-box;
+  flex-wrap: wrap; /* WICHTIG für Mobilgeräte */
 }
+
 
 #status-title {
     /* Auto layout */
@@ -71,8 +71,8 @@ ul, li {
     height: 20px;
     width: 127px;
     height: 20px;
-    left: 91px;
-    top: 154px;
+    /* left: 91px; */
+    /* top: 154px; */
     line-height: 20px;
     color: #1C1B1F;
     padding: 0;
@@ -138,7 +138,7 @@ h1 {
     /* position: relative; */
     width: 1280px;
     height: 100%;
-    left: calc(50% - 1280px/2);
+    /* left: calc(50% - 1280px/2); */
 }
 
 #education-list {
@@ -149,7 +149,7 @@ h1 {
     gap: 32px;
     width: 1280px;
     height: 100%;
-    left: calc(50% - 1280px/2);
+    /* left: calc(50% - 1280px/2); */
 }
 
 
@@ -312,4 +312,49 @@ h1 {
 
 
 
+
+/* mobile responsiveness */
+@media (max-width: 768px) {
+  #hero {
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+  }
+
+  #status-title,
+  #hero-description {
+    width: 100%;
+    align-items: center;
+    text-align: center;
+  }
+
+  #profile-pic {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+  }
+
+  h1 {
+    font-size: 42px;
+    line-height: 48px;
+    width: 100%;
+  }
+
+  #education-tile,
+  .work-tile {
+    width: 100%;
+    padding: 24px;
+    gap: 12px;
+  }
+
+  #work-experience-list,
+  #education-list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #content {
+    padding: 0 16px;
+  }
+}
 
