--- a/styles.css
+++ b/styles.css
@@ -444,6 +444,29 @@ h1 {
 }
 
 
+.thesis-pic {
+/* practise 8 */
+
+    box-sizing: border-box;
+
+    /* Auto layout */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 44px;
+    gap: 16.38px;
+    isolation: isolate;
+
+    width: 312.01px;
+    height: 352.5px;
+    left: 138px;
+    top: 333px;
+    border: 1px solid #D9D9D9;
+    border-radius: 45.0406px;
+    transform: rotate(8.15deg);
+}
+
+
 
 /* mobile responsiveness */
 @media (max-width: 768px) {
