--- a/styles.css
+++ b/styles.css
@@ -443,6 +443,20 @@ h1 {
     color:#1C1B1F;
 }
 
+#study {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;   
+    padding: 44px;
+    gap: 16px;
+    isolation: isolate;
+    border: 1px solid #DEDEDE;
+    border-radius: 44px;
+    /* left: calc(50% - 1280px/2); */
+}
+
+/*BEGIN: Here we will add below pic styling*/
 
 .thesis-pic {
 /* practise 8 */
@@ -466,7 +480,91 @@ h1 {
     transform: rotate(8.15deg);
 }
 
+/*END: Here we will add above pic styling*/
 
+
+.study-title {
+    /* Masterarbeit */
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    color: #1D5D4D;
+}
+
+.study-tile-line {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 0;
+    padding: 0;
+}
+
+
+/* Dez. 2023 – Gegenwärtig */
+.study-date-presentation {
+    width: 192px;
+    height: 20px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #1D5D4D;
+}
+
+
+.study-prof {
+    padding: 0px;
+    gap: 10px;
+    background: #9AC4F8;
+    border: 1px solid #D9D9D9;
+    border-radius: 44px;
+    width: 293px;
+    height: 20px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.thesis-title {
+    width: 457px;
+    height: 40px;
+    left: 666px;
+    top: 171px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #1C1B1F;
+}
+
+.thesis-title-highlight {
+    font-weight: 600;
+    color: #1D5D4D;
+}
+
+.thesis-description {
+    width: 957px;
+    height: auto;
+    left: 666px;
+    top: 221px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1C1B1F;
+}
 
 /* mobile responsiveness */
 @media (max-width: 768px) {
