--- a/styles.css
+++ b/styles.css
@@ -469,7 +469,86 @@ h1 {
     isolation: isolate;
     width: 312.01px;
     height: 352.5px;
+} 
+
+#place-filler {
+        /* practise 9 */
+
+    /* Auto layout */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 44px;
+    gap: 16.38px;
+    isolation: isolate;
+
+    /* practise 9 */
+    /* position: absolute;*/
+    width: 312.01px;
+    height: 352.5px;
+    left: 44px;
+    top: 44px; 
+
+    background: url(place-filler.png);
+    border-radius: 45.0406px;
+    transform: rotate(-8.52deg);
+
+    /* Inside auto layout */
+    flex: none;
+    order: 10;
+    flex-grow: 0;
+    z-index: 10;
+
+    
 }
+
+#thesis-title-page {
+    box-sizing: border-box;
+    /* Auto layout */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 44px;
+    gap: 16.38px;
+    isolation: isolate;
+
+    width: 312.01px;
+    height: 352.5px;
+    left: 138px;
+    top: 333px; 
+    background: url(thesis-title.png);
+    border: 1px solid #D9D9D9;
+    border-radius: 45.0406px;
+    transform: rotate(8.15deg);
+    /* Inside auto layout */
+    flex: none;
+    order: 12;
+    flex-grow: 0;
+    z-index: 12;
+}
+
+#university-logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 44px;
+    gap: 16.38px;
+    isolation: isolate;
+    width: 312.01px;
+    height: 352.5px;
+    left: 44px;
+    top: 598px; 
+    background: url(university-logo.png);
+    border-radius: 45.0406px;
+    transform: rotate(-8.52deg);
+    /* Inside auto layout */
+    flex: none;
+    order: 11;
+    flex-grow: 0;
+    z-index: 11;
+
+}
+
 
 /*END: Here we will add above pic styling*/
 
@@ -478,9 +557,10 @@ h1 {
     flex-direction: column;
     align-items: center;
     padding: 0px;
-    gap: 16px;
+    gap: 10px;
     width: 568px;
     height: auto;
+    margin-bottom: 20px;
 }
 
 .study-title {
@@ -497,7 +577,7 @@ h1 {
 .study-tile-line {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 4px;
     margin: 0;
     padding: 0;
 }
@@ -528,7 +608,7 @@ h1 {
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 20px;
+    /* line-height: 20px; */
     color: #FFFFFF;
     display: flex;
     align-items: center;
@@ -564,6 +644,7 @@ h1 {
     font-size: 16px;
     line-height: 24px;
     color: #1C1B1F;
+    margin-bottom: 20px;
 }
 
 .course-tile {
@@ -576,7 +657,6 @@ h1 {
     border: 1px solid #D9D9D9;
     border-radius: 44px;
     margin-bottom: 20px;
-
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
