--- a/styles.css
+++ b/styles.css
@@ -465,54 +465,69 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
-
 .thesis-pic {
-  width: 312.01px;
-  height: auto;
-  padding: 0; /* Padding already in container */
-  border-radius: 45.0406px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-  object-fit: cover;
-  transition: transform 0.3s ease;
-  background-color: white;
-  border: none;
+    width: 312.01px;
+    height: 352.5px;
+    padding: 0; /* Padding already in container */
+    border-radius: 45px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+    object-fit: cover;
+    transition: transform 0.3s ease;
+    background-color: white;
 } 
 
 #place-filler {
-  transform: rotate(-8.52deg);
-  z-index: 10;
-  margin-bottom: -170px;
-  background: url("assets/images/place-filler.png") no-repeat center/cover;
+    width: 312.01px;
+    height: 352.5px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 44px;
+    gap: 16.38px;
+    isolation: isolate;
+    transform: rotate(-8.52deg);
+    z-index: 10;
+    margin-bottom: -170px;
+    background: url("assets/images/place-filler.png") no-repeat center/cover;
 }
 
 #thesis-title-page {
-  transform: rotate(8.15deg);
-  z-index: 12;
-  margin-top: 100px;
-  margin-bottom: -100px;
-  background: url("assets/images/thesis-title.png") no-repeat center/cover;
-  border: 1px solid #D9D9D9;
+    width: 312.01px;
+    height: 352.5px;
+    transform: rotate(8.52deg) scale(0.95);
+    z-index: 12;
+    margin-top: 115px;
+    margin-bottom: -100px;
+    margin-left: 200px;
+    background: url("assets/images/thesis-title.png") no-repeat center/cover;
+    border: 1px solid #D9D9D9;
 }
 
 #university-logo {
-  transform: rotate(-6deg);
-  z-index: 11;
-  margin-top: 100px; /* <- HIER stellst du den Abstand ein */
-  margin-bottom: 0;
+    width: 312.01px;
+    height: 352.5px;
+    transform: rotate(-8.52deg);
+    z-index: 11;
+    margin-top: 50px; /* <- HIER stellst du den Abstand ein */
+    margin-bottom: 0px;
+    background: url("assets/images/university-logo.png") no-repeat center/cover;
+    border: 1px solid #D9D9D9;
 }
-
 
 .thesis-pic:hover {
   transform: scale(1.02) rotate(0deg);
   z-index: 20;
 }
 
-
-
 /*END: Here we will add above pic styling*/
+.study-content {
+    align-items: center;
+    margin-left: 20px;
+}
 
 .thesis-presentation {
     display: flex;
