--- a/styles.css
+++ b/styles.css
@@ -674,6 +674,64 @@ h1 {
     color: #1C1B1F;
     margin: 0;
 }
+.others_container {
+    box-sizing: border-box;
+    padding: 0px;
+    gap: 216px;
+    width: 1280px;
+    height: 540px;
+    border: 1px solid #D9D9D9;
+    border-radius: 44px;
+}
+
+.others_title {
+    width:105px;
+    height:36px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* padding: 8px 16px; */
+    gap: 10px;
+    background: #9747FF;
+    border-radius: 44px;
+}
+
+.others_andere {
+    width: 65px;
+    height: 20px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FDFDFF;
+}
+
+.others_description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 32px;
+    isolation: isolate;
+    width: 954px;
+    height: 320px;
+}
+
+.others_paragraph {
+    width: 960px;
+    height: 320px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #1C1B1F;
+    margin: 0;
+}
 
 /* mobile responsiveness */
 @media (max-width: 768px) {
