--- a/styles.css
+++ b/styles.css
@@ -701,6 +701,46 @@ h1 {
   font-weight: 600;
 }
 
+#contact-picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 44px;
+    gap: 16.38px;
+    isolation: isolate;
+    width: 341px;
+    height: 467px;
+    background: url("assets/images/contact-picture.png") no-repeat center/cover;
+    border-radius: 45.0406px;
+}
+
+.contact_subheader {
+    width: auto;
+    height: 23px;
+    font-family: 'Plus Jakarta Sans Semibold';
+    font-style: bold;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 23px;
+    text-align: center;
+    color: #1D5D4D;
+}
+
+.language_knowledge_paragraph {
+    width: auto;
+    height: 23px;
+    font-family: 'Plus Jakarta Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 23px;
+    /* identical to box height */
+    text-align: center;
+    color: #1D5D4D;
+}
+
+#contact_form {
+}
 
 /* mobile responsiveness */
 @media (max-width: 768px) {
