--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,25 @@
-#content {
+.navbar {
     display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
     padding: 0px;
-    gap: 32px;
-    position: relative;
+    gap: 22px;
+    margin: 0 auto;
     width: 1280px;
-    height: 100%;
+    height: 54px;
+}
+
+#content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 32px 16px;
+  gap: 32px;
 }
 
 ul, li {
