--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,61 @@
-.navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    gap: 22px;
-    margin: 0 auto;
-    width: 1280px;
-    height: 54px;
+html {
+  scroll-behavior: smooth;
 }
+
+.navbar-wrapper {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  background-color: white; /* Optional, je nach Design */
+  z-index: 1000;
+
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1280px;
+  height: 54px;
+  padding: 0 16px;
+  gap: 22px;
+}
+
+/* BEGIN Nav-Center */
+.nav-center {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 44px;
+  gap: 54px;
+  width: 988px;
+  height: 54px;
+  border: 1px solid #DEDEDE;
+  border-radius: 44px;
+}
+
+.nav-link {
+  /* width: 86px; */
+  padding: 0 8px;
+
+  height: 20px;
+  font-family: 'Plus Jakarta Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #1C1B1F;
+  text-decoration: none;
+  white-space: nowrap;
+}
+/* END Nav-Center */
 
 /* BEGIN Navbar Left Section */
 .nav-left {
