add styles and functions tnav bar

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,11 @@ html {
   color: #1C1B1F;
 }
 
+.nav-name-link {
+  text-decoration: none;
+  color: inherit;
+}
+
 .nav-profile-pic {
   width: 30px;
   height: 30px;
@@ -151,6 +156,7 @@ ul, li {
   border-radius: 44px;
   box-sizing: border-box;
   flex-wrap: wrap;
+  margin-top: 140px;
 }
 
 #status-title {
@@ -244,6 +250,8 @@ h1 {
     gap: 32px;
     width: 1280px;
     height: 100%;
+    margin-top: 100px;
+    scroll-margin-top: 50px;
 }
 
 #education-list {
@@ -333,6 +341,7 @@ h1 {
     gap: 24px;
     width: 1280px;
     margin: 0 auto;
+    padding-top: 80px; 
 }
 
 #work-experience-list {
@@ -399,6 +408,10 @@ h1 {
     text-align: center;
     margin: 4px 0 0 0;
     max-width: 497px;
+}
+
+#projects {
+  margin-top: 80px;
 }
 
 #project-list {
@@ -534,7 +547,9 @@ h1 {
     color:#1C1B1F;
 }
 
-
+#study {
+  padding-top: 80px; 
+}
 .study-container {
     box-sizing: border-box;
     display: flex;
@@ -828,6 +843,7 @@ h1 {
   padding: 80px 20px;
   box-sizing: border-box;
   width: 100%;
+  scroll-margin-top: 100px;
 }
 
 .contact-wrapper {
@@ -1085,4 +1101,26 @@ h1 {
     padding: 0 16px;
   }
 }
+
+
+.section-about {
+  background-color: #42d1aa; /* Türkis */
+}
+
+.section-education {
+  background-color: #9747FF; /* Violett */
+}
+
+.section-projects {
+  background-color: #FFA800; /* Orange */
+}
+
+.section-experience {
+  background-color: #FF6B6B; /* Rot */
+}
+
+.section-others {
+  background-color: #4B7BE5; /* Blau */
+}
+
 
