--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ html {
   height: 54px;
   padding: 0 16px;
   gap: 22px;
+  margin-right: 20px;
 }
 
 /* BEGIN Nav-Center */
@@ -891,9 +892,8 @@ h1 {
   padding: 44px;
   gap: 16.38px;
   isolation: isolate;
-  width: 341px;
-  height: 467px;
-  background: url("assets/images/contact-picture.png");
+  width: 560px;
+  height: 657px;
   border-radius: 45.0406px;
 }
 
