--- a/styles.css
+++ b/styles.css
@@ -885,8 +885,33 @@ h1 {
   width: 50%;
 }
 
-#contact-picture {
+
+
+.contact-picture-compound {
+  position: relative;
+  width: fit-content;
+}
+
+
+
+#contact-picture-location {
+  position: absolute;
+  top: 40px;     
+  right: 20px;
+  z-index: 2;
+
   display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 110px;
+  height: 34px;
+  border-radius: 12px;
+  background: rgba(28, 27, 31, 0.2);
+}
+
+#contact-picture {
+  display: block;
   box-sizing: border-box;
   flex-direction: column;
   align-items: center;
@@ -896,7 +921,7 @@ h1 {
   isolation: isolate;
   width: 341px;
   height: 467px;
-  border-radius: 45.0406px;
+  border-radius: 45px;
 }
 
 .contact_header {
