change: add contact-picture-tagname + contact-picture-dayroutine & placement via css

--- a/styles.css
+++ b/styles.css
@@ -899,15 +899,33 @@ h1 {
   top: 40px;     
   right: 20px;
   z-index: 2;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   width: 110px;
   height: 34px;
   border-radius: 12px;
   background: rgba(28, 27, 31, 0.2);
+}
+
+#contact-picture-tagname {
+  position: absolute;
+  top: 200px;     
+  left: 30px;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#contact-picture-dayroutine {
+  position: absolute;
+  top: 300px;     
+  right: -25px;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #contact-picture {
